Fix 'your' not showing'

--- a/client/src/pages/ChatRoom/index.css
+++ b/client/src/pages/ChatRoom/index.css
@@ -57,5 +57,5 @@
 }
 
 .chatroom-icon {
-  font-size: 3rem;
+  font-size: 2rem;
 }
